--- a/styles.css
+++ b/styles.css
@@ -8,5 +8,51 @@ body {
 }
 
 header{
-    border: 1px solid red;
+    background-image: url("./images/header.jpeg");
+    width: 100%;
+    height: 400px;
+    box-shadow: inset 0px -50px 50px 50px #212F3D;
+   
+    
 }
+
+.content-header{
+    color: white;
+    backdrop-filter: blur(4px);
+    height: 100%;
+}
+
+.content-header p{
+    display: block;
+    float: left;
+    margin-left: 80px;
+    margin-top: 100px;
+    font-size: 80px;
+}
+
+.content-header ul{
+    display: block;
+    float: right;
+    margin-right: 0px;
+}
+
+.content-header ul li{
+    display: block;
+    float: left;
+    text-decoration: none;
+    margin-right: 80px;
+    margin-top: 50px;
+    font-size: 30px;
+
+}
+
+.content-header ul li a{
+    color: white;
+    text-decoration: none;
+}
+
+
+
+
+
+
