--- a/PROJECT 1/styles.css
+++ b/PROJECT 1/styles.css
@@ -88,6 +88,7 @@ header{
     overflow: hidden;
     margin-bottom: 50px;
     margin-top: 50px;
+    box-shadow: 20px 20px 20px black;
 }
 
 .slider ul{
@@ -139,6 +140,7 @@ header{
     margin: 20px;
     margin-bottom: 100px;
     margin-top: 20px;
+    box-shadow: 20px 20px 20px black;
 
 }
 
@@ -149,16 +151,45 @@ header{
 
 
 footer{
+    display: inline-block;
     width: 100%;
     color: white;
-    height: 150px;
+    height: 200px;
     background-color: black;
 }
 
 .development-with{
+    text-align: right;
     float: right;
-    margin-right: 200px;
+    margin-right: 0px;
+    margin-top: 0px;
 }
 
+
+.development-with div img{
+    width: 10%;
+    height: 10%;
+    margin-right: 30px;
+    margin-top: 15px;
+    float: right;
+
+}
+
+.development-with p{
+    font-family: 'Bebas';
+    margin-right: 7%;
+    font-size: 20px;
+    margin-top: 15px;
+
+}
+
+.development-by{
+    float:left;
+    font-family: 'Bebas';
+    font-size: 20px;
+    margin-top: 86px;
+    margin-left: 2%;
+
+}
 
 
