INDEX.HTML & STYLES.CSS: Se agregan imagenes con sus respectivos estilos

--- a/PROJECT 1/styles.css
+++ b/PROJECT 1/styles.css
@@ -28,7 +28,8 @@ body {
 }
 
 header{
-    background-image: url("./images/header.jpeg");
+    background-image: url("./images/HEADER.png");
+    background-repeat: no-repeat;
     width: 100%;
     height: 400px;
     box-shadow: inset 0px -50px 50px 50px var(--gris-background);
@@ -40,21 +41,23 @@ header{
     color: white;
     backdrop-filter: blur(2px);
     height: 100%;
+
 }
 
 .content-header p{
     display: block;
     float: left;
     margin-left: 5%;
-    margin-top: 60px;
-    font-size: 80px;
+    margin-top: 62px;
+    font-size: 180px;
     font-family: 'Bebas';
+    text-shadow: 10px 10px 10px black;
 }
 
 .content-header ul{
     display: block;
     float: right;
-    margin-right: 0px;
+    margin-right: 57px;
 }
 
 .content-header ul li{
@@ -65,6 +68,7 @@ header{
     margin-top: 50px;
     font-size: 30px;
     font-family: 'Bebas';
+    text-shadow: 10px 10px 10px black;
 
 }
 
@@ -78,17 +82,24 @@ header{
     color: white;
     font-size: 50px;
     margin-left: 5%;
-    margin-top: 150px;
+    margin-top: 20px;
+    text-shadow: 10px 10px 10px black;
+}
+
+.header-gallery{
+    margin-top: 20px;
+    padding-top: 10px;
 }
 
 .slider{
     width: 85%;
-    height: 200px;
+    height: 500px;
     margin: auto;
     overflow: hidden;
     margin-bottom: 50px;
     margin-top: 50px;
     box-shadow: 20px 20px 20px black;
+    border-radius: 15px;
 }
 
 .slider ul{
@@ -107,6 +118,7 @@ header{
 
 .slider img{
     width: 100%;
+    height: 100%;
 }
 
 @keyframes cambio{
@@ -125,29 +137,34 @@ header{
 
 .article-card{
     display: flex;
-    width: 85%;
+    width: 90%;
     margin: auto;
-    overflow: hidden;
     flex-wrap: wrap;
-    padding: 0px;
     justify-content: center;
 
 }
 
 .card{
-    height: 200px;
     width: 30%;
     margin: 20px;
-    margin-bottom: 100px;
+    margin-bottom: 40px;
     margin-top: 20px;
-    box-shadow: 20px 20px 20px black;
+    box-shadow: 10px 20px 20px black;
 
 }
 
 .card img{
     width: 100%;
+    height: 100%;
+    box-shadow: 20px 20px 20px black;
+    transition: all 300ms;
+    position: relative;
+    border-radius: 10px;
 }
 
+.card img:hover{
+    transform: scale(1.14);
+}
 
 
 footer{
