STYLES.CSS: Se actualizan estilos

--- a/PROJECT 1/styles.css
+++ b/PROJECT 1/styles.css
@@ -152,6 +152,7 @@ header{
     margin-top: 20px;
     
     
+    
 
 }
 
@@ -164,6 +165,7 @@ header{
     position: relative;
     border-radius: 10px;
     cursor: pointer;
+    overflow: none;
     
     
 }
@@ -188,7 +190,6 @@ footer{
     float: right;
     margin-right: 0px;
     margin-top: 0px;
-    border: 3px solid green;
     width: 50%;
     height: 100%;
 }
@@ -217,7 +218,7 @@ footer{
     font-size: 20px;
     margin-top: 86px;
     margin-left: 2%;
-    border: 3px solid red;
+    
 
 }
 
@@ -273,7 +274,7 @@ footer{
         font-size: 30px;
         margin-top: 86px;
         margin-left: 2%;
-        border: 3px solid red;
+
     
     }
 
