--- a/PROJECT 1/styles.css
+++ b/PROJECT 1/styles.css
@@ -37,6 +37,25 @@ header{
    
     
 }
+header div label{
+    display: none;
+    width: 30px;
+    height: 30px;
+    padding: 10px;
+    float: right;
+    margin-top: 435px;
+    margin-right: 139px;
+    text-align: center;
+}
+
+header div label:hover{
+    cursor: pointer;
+}
+
+
+#btn-menu{
+    display: none;
+}
 
 .content-header{
     color: white;
@@ -77,6 +96,12 @@ header{
 .content-header ul li a{
     color: white;
     text-decoration: none;
+    transition: all 300ms;
+}
+
+.content-header ul li a:hover{
+    text-shadow: 12px 12px 1px black;
+
 }
 
 .header-gallery p{
@@ -403,7 +428,7 @@ footer{
 
     .content-header ul{
         margin-top: 32%;
-        margin-left: 21%;
+        margin-left: 20%;
     }
 
     .content-header{
@@ -411,4 +436,262 @@ footer{
     }
     
 }
+
+@media (max-width: 722px) {
+
+    .content-header ul{
+        margin-top: 36%;
+        margin-left: 18%;
+    }
+
+    .development-with {
+        width:35%;
+        
+    }
+
+    .development-with p{
+        font-size: 19px;
+    }
+
+    .development-with div img{
+        width: 15%;
+        margin-left: -26px;
+        margin-top: 15px;
+    }
+    
+    .development-by{        
+        font-size: 19px;
+        margin-bottom: 5px;  
+    }
+
+    footer{
+        height: 108px;
+    }
+
+    .pagination{
+        margin-bottom: 40px;
+        margin-top: -14px;
+    }
+
+    .pagination a{
+        width: 8px;
+        height: 8px;
+    }
+
+}
+
+
+@media (max-width: 700px){
+    header div label{
+        display: block;
+        float: right;
+        margin: 0;
+        margin-right: 33px;
+        margin-top: 53px;
+        width: 80px;
+        height: 80px;
+        padding: 0px;
+        padding-bottom: 0;
+    }
+
+    .content-header ul{
+        display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        margin: 0;
+        margin-top: 200px;
+        font-size: 20px;
+        font-family: 'Bebas';
+        text-shadow: 10px 10px 10px black;
+        margin-left: -70%;
+        transition: all 0.5s;
+    
+    }
+
+    .content-header ul li{
+        margin: 0;
+        padding: 15px;
+        padding-left: 51px;
+    }
+
+    header{
+        height: 380px;
+    }
+
+    
+
+    #btn-menu:checked ~ .menu{
+        margin-left: 0;
+        margin-top: 200px;
+    }
+
+    .content-header p{
+        font-size: 140px;
+    }
+
+    .header-gallery p{
+        text-align: right;
+        margin-right: 50px;
+        font-size: 32px;
+    }
+}
+
+@media (max-width: 546px){
+
+    .content-header p{
+        font-size: 110px;
+    }
+
+    .header-gallery p{
+        margin-top: -4px;
+        font-size: 32px;
+    }
+
+    .slider{
+        margin-top: 37px;
+    }
+
+    .pagination a{
+        font-size: 30px;
+    }
+
+}
+
+@media (max-width: 498px){
+
+    .development-with{
+        width: 40%;
+    }
+    .pagination a{
+        font-size: 35px;
+    }
+
+    .header-gallery p{
+        font-size: 23px;
+    }
+
+    .slider{
+        margin-top: 10px;
+        margin-bottom: 28px;
+    }
+
+    .content-header ul li a{
+        font-size: 23px;
+
+    }
+
+    .content-header p{
+        font-size: 65px;
+        margin-top: 30px;
+    }
+
+
+
+}
+
+
+@media (max-width: 460px){
+    .pagination a{
+        font-size: 30px;
+        padding-left: 1px;
+    }
+
+    footer{
+        height: 66px;
+        margin-bottom: -30px;
+    }
+
+
+
+    .development-by{        
+        font-size: 14px;
+        margin-left: 5px;
+        margin-top: 53px;  
+    }
+
+    .development-with p{
+        font-size: 14px;
+        text-align: center;
+        margin-left: 1px;
+        margin-top: 5px;
+    }
+
+    .development-with div img{
+        margin-left: -54px;
+        margin-top: 7px;
+    }
+
+
+    
+
+    .pagination a{
+        font-size: 25px;
+        margin-left: 14px;
+        margin-bottom: 0px;
+        margin-top: 7px;
+    }
+
+}
+
+@media (max-width: 400px){
+
+    .pagination a{
+        font-size: 23px;
+    }
+
+}
+
+
+@media (max-width: 346px){
+
+    .pagination a{
+        font-size: 18px;
+        margin-left: 0px;
+    }
+
+    .content-header p{
+        font-size: 48px;
+    }
+
+    header div label{
+        margin-right: 0px;
+    }
+
+    .header-gallery p{
+        font-size: 18px;
+        margin-right: 30px;
+    }
+
+    .content-header ul li a{
+        font-size: 18px;
+        margin-top: 10px;
+    }
+
+    .menu{
+        margin-top: 11px;
+    }
+
+    .menu li{
+        margin-top: 5px;
+    }
+
+    .content-header ul{
+        margin-top: 116px;
+    }
+
+    #btn-menu:checked ~ .menu {
+        margin-left: 0;
+        margin-top: 119px;
+    }
+
+    header{
+        height: 300px;
+    }
+
+
+
+
+}
+
+
 
